@@ -1,10 +1,10 @@
 <div align="center">
 
-# CpuFeaturesJni
-[![License](https://img.shields.io/github/license/aecsocket/cpu-features-jni)](LICENSE)
-[![CI](https://img.shields.io/github/actions/workflow/status/aecsocket/cpu-features-jni/build.yml)](https://github.com/aecsocket/cpu-features-jni/actions/workflows/build.yml)
-![Release](https://img.shields.io/maven-central/v/io.github.aecsocket/cpu-features-jni?label=release)
-![Snapshot](https://img.shields.io/nexus/s/io.github.aecsocket/cpu-features-jni?label=snapshot&server=https%3A%2F%2Fs01.oss.sonatype.org)
+# CpuFeaturesJava
+[![License](https://img.shields.io/github/license/aecsocket/cpu-features-java)](LICENSE)
+[![CI](https://img.shields.io/github/actions/workflow/status/aecsocket/cpu-features-java/build.yml)](https://github.com/aecsocket/cpu-features-java/actions/workflows/build.yml)
+![Release](https://img.shields.io/maven-central/v/io.github.aecsocket/cpu-features-java?label=release)
+![Snapshot](https://img.shields.io/nexus/s/io.github.aecsocket/cpu-features-java?label=snapshot&server=https%3A%2F%2Fs01.oss.sonatype.org)
 
 Java bindings for [Google cpu_features](https://github.com/google/cpu_features)
 
@@ -19,9 +19,21 @@ which features may be supported, so must rely on the most accessible version - w
 cpu_features, Java programs can detect which features the host CPU supports and load different native libraries based
 on this info.
 
-**Architectures:** aarch64, arm, riscv, x86
+**Note**: Version 2.0 of this library uses the (currently unstable) Java foreign function interface, and will require
+Java 19 as well as the command line arguments `--enable-preview --enable-native-access=ALL-UNNAMED`. The previous
+version, using JNI and Java 15, is still available under `io.github.aecsocket:cpu-features-jni:1.0.1`.
 
-**Platforms:** linux, windows, macos, macos-arm64
+## Coverage
+
+Platforms:
+- [x] Linux (x86)
+- [x] Windows (x86)
+- [x] MacOS (x86)
+
+Architectures:
+- [ ] AArch64
+- [ ] ARM
+- [x] X86
 
 ## Usage
 
@@ -31,36 +43,36 @@ repositories {
 }
 
 dependencies {
-    implementation("io.github.aecsocket", "cpu-features-jni", "VERSION")
-    runtimeOnly("io.github.aecsocket", "cpu-features-jni-natives-linux", "VERSION")
-    runtimeOnly("io.github.aecsocket", "cpu-features-jni-natives-windows", "VERSION")
-    runtimeOnly("io.github.aecsocket", "cpu-features-jni-natives-macos", "VERSION")
-    runtimeOnly("io.github.aecsocket", "cpu-features-jni-natives-macos-arm64", "VERSION")
+    implementation("io.github.aecsocket", "cpu-features-java", "VERSION")
+    // native libraries
+    runtimeOnly("io.github.aecsocket", "cpu-features-java-natives-linux-x86", "VERSION")
+    runtimeOnly("io.github.aecsocket", "cpu-features-java-natives-windows-x86", "VERSION")
+    runtimeOnly("io.github.aecsocket", "cpu-features-java-natives-macos-x86", "VERSION")
 }
 ```
 
-Usage is very similar to cpu_features. See [HelloCpuFeatures.java](cpu-features-jni-test/src/test/java/cpufeatures/HelloCpuFeatures.java)
+Usage is very similar to cpu_features. See [HelloCpuFeatures.java](src/test/java/cpufeatures/HelloCpuFeatures.java)
 to get a minimal implementation.
 
 ### Getting CPU info
 
 ```java
-// Load the native libraries from the jar (in `cpufeatures/`)
+// If using the native library dependencies:
 CpuFeatures.load();
-// Or load them manually
-// System.load("name-of-lib-file");
+// Otherwise load the libraries yourself:
+// System.loadLibrary("cpu_features");
 
 // CpuFeatures is the entry point to the application
 CpuArchitecture arch = CpuFeatures.getArchitecture();
 switch (arch) {
-    X86 -> {
+    case ARM -> {
         // The various -Info classes hold all CPU info
-        X86Info info = CpuFeatures.getX86Info();
-        System.out.println(info.vendor);
-    }
-    ARM -> {
-        ArmInfo info = CpuFeatures.getArmInfo();
+        ArmInfo info = ArmInfo.get();
         System.out.println(info.implementer);
+    }
+    case X86 -> {
+        X86Info info = X86Info.get()
+        System.out.println(info.vendor);
     }
     // ...
 }
@@ -72,12 +84,12 @@ switch (arch) {
 public static boolean useAVX2 = false;
 
 public static void init() {
-    X86Info info = CpuFeatures.getX86Info();
+    X86Info info = X86Info.get();
     // Prefer accessing `features` directly over using an enum
-    useAVX2 = info.features.avx2;
-    // useAVX2 = info.has(X86Feature.AVX2);
+    useAVX2 = info.features().avx2();
+    // useAVX2 = X86Feature.AVX2.in(info.features());
 
-    List<X86Feature> features = info.featureList();
+    Set<X86Feature> features = info.featureSet();
     System.out.println("features: " + features);
 }
 ```
@@ -85,8 +97,8 @@ public static void init() {
 ## Building from source
 
 ```sh
-git clone https://github.com/aecsocket/cpu-features-jni
-cd cpu-features-jni
+git clone https://github.com/aecsocket/cpu-features-java
+cd cpu-features-java
 git submodule update --init
-./gradlew generateNatives build
+./gradlew build
 ```
